// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Draft component renders draft mode disabled 1`] = `
<DocumentFragment>
  <div
    class="my-6 border-4 border-accent bg-primary text-primary-content rounded w-full p-4 flex gap-4"
    id="control-panel"
  >
    <p
      class="font-bold"
    >
      Control Panel
    </p>
    <p
      class="text-secondary-content"
    >
      Draft mode is disabled. 
      <a
        class="text-primary-content underline"
        href="/api/enable-draft-mode"
      >
        Enable draft mode
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`Draft component renders draft mode enabled 1`] = `
<DocumentFragment>
  <div
    class="my-6 border-4 border-accent bg-primary text-primary-content rounded w-full p-4 flex gap-4"
    id="control-panel"
  >
    <p
      class="font-bold"
    >
      Control Panel
    </p>
    <p
      class="text-primary-content"
    >
      Draft mode is enabled. 
      <a
        class="text-primary-content underline"
        href="/api/disable-draft-mode"
      >
        Disable draft mode
      </a>
    </p>
  </div>
</DocumentFragment>
`;
